# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-03-12
# --------------------------------------------------------------------
# + cut release v5.1
# ~ revamped the fit results print out, it now prints the fit activities
#   and does a big print out and the end of everything so you can easily
#   see the results per crystal.
# + added an option to sumw2 the fit data before fitting


# 2017-03-11
# --------------------------------------------------------------------
# ~ fixed a BIG bug with the second channel showing less activity,
#   turns out I was double scaling the fit hist to data/mc integral
# + add init to make sure the fit bounds get set correctly
# ~ set the fit rebin rescale to help the fit converge
# ~ expanded the fit range a little bit


# 2017-03-10
# --------------------------------------------------------------------
# ~ fixed a bug in makeResid50() histo naming
# ~ fixed return data/mc bugs in buildData50() and buildMC50()


# 2017-03-09
# --------------------------------------------------------------------
# + using backgrounds50.txt
# + mega code revamp to ger multi chans separately plotted
# + mega code revamp to get multi chans included in the fit
# V switch to 51-multi-chan2.py - more big code rewrite needed
# + iterate through the chars in the chans string
# ~ mashed all the fitting histo code together
# ~ tweaked the multi channel handling
# + new buildMC50() in funcs50.py
# + new buildData50() in funcs50.py


# 2017-03-07
# --------------------------------------------------------------------
# ~ fixed data comparison with Pushpa's low energy noise cuts


# 2017-02-27
# --------------------------------------------------------------------
# + new build50() to deal with format changes